회사 상세 정보 페이지

--- a/frontend/src/routes/Company.css
+++ b/frontend/src/routes/Company.css
@@ -134,6 +134,30 @@
 
 
 
+.category{
+    
+    overflow:hidden;
+    margin-bottom:10px;
+    
+}
+
+.category li{
+    
+    list-style: none;
+    float:left;
+    background-color:black;
+    color:white;
+    border:1px solid black;
+    padding:15px 20px;
+    
+    margin:0 10px;
+    
+    cursor:pointer;
+}
+
+
+
+
 
 
 
